--- a/.github/workflows/md_link_check.yml
+++ b/.github/workflows/md_link_check.yml
@@ -3,6 +3,8 @@ name: Check Markdown links
 on:
   workflow_dispatch:
   push:
+  schedule:
+    - cron: '20 */3 * * *'
 
 jobs:
   markdown-link-check:
