--- a/.github/workflows/build_document.yml
+++ b/.github/workflows/build_document.yml
@@ -16,8 +16,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        persist-credentials: false
-        fetch-depth: 0
+          token: ${{secrets.PUSH_TOKEN}}
     - name: Install dependencies
       run: |
         sudo apt-get install texlive-latex-extra
@@ -31,7 +30,7 @@ jobs:
         mv nowhere_continuous_wpo.pdf ${{env.RESULT_PATH}}
     - name: status at ${{github.ref}}
       run: git status
-    - name: commit result
+    - name: commit and push result
       working-directory: ${{github.workspace}}
       shell: bash
       run: |
@@ -39,9 +38,4 @@ jobs:
         git config --global user.email 'vil02@users.noreply.github.com'
         git add ${{env.RESULT_PATH}}
         git commit -m "Automated document generation"
-
-    - name: push result
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{secrets.PUSH_TOKEN}}
-        branch: ${{github.ref}}
+        git push
