chore: add `apt-get update`

--- a/.github/workflows/build_document.yml
+++ b/.github/workflows/build_document.yml
@@ -19,6 +19,7 @@ jobs:
           token: ${{secrets.PUSH_TOKEN}}
       - name: Install dependencies
         run: |
+          sudo apt-get update
           sudo apt-get install texlive-latex-extra
       - name: run build script
         working-directory: ${{github.workspace}}
