--- a/.github/workflows/chktex.yml
+++ b/.github/workflows/chktex.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11  # v4
+        uses: actions/checkout@v4
 
       - name: LaTeX linter
         uses: colinaaa/chktex-action@v1.1.2
